# osgt-qol

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  patches.txt
.github/workflows/: build-and-release.yaml  build.yaml  release.yaml
dep/: CMakeLists.txt
scripts/: run-dev-build.bat
src/: CMakeLists.txt  dllmain.cpp  game.cpp  game.hpp  setup.cpp  utils.cpp  utils.hpp
src/game/: drawing.cpp  events.cpp  game.cpp  game.hpp  input.cpp  options.cpp  signatures.hpp  weathermanager.cpp
src/game/hook/: AudioManagerFMODPreload.cpp  CreateLogOverlay.cpp  PetRenderDataUpdate.cpp  SetFPSLimit.cpp  TabComponentAddTabButton.cpp
src/game/struct/: app.hpp  audiomanager.hpp  audiomanagerfmod.hpp  baseapp.hpp  entity.hpp  entityutils.cpp  entityutils.hpp  gamepad.hpp  gamepadmanager.hpp  gamepadprovider.hpp  gametimer.hpp  iteminfomanager.hpp  playeritems.hpp  renderutils.hpp  trademenu.hpp  variant.hpp
src/game/struct/components/: gamelogic.hpp  mapbg.hpp
src/game/struct/graphics/: background.cpp  background.hpp  background_blank.cpp  background_blank.hpp  background_clouds.cpp  background_clouds.hpp
src/patch/: patch.cpp  patch.hpp
src/patch/core/: about.cpp  config.cpp  integrity.cpp  version.cpp
src/patch/user/: audio.cpp  chat.cpp  framerate.cpp  input.cpp  net.cpp  playmodoverlay.cpp  render.cpp
src/patches/: audio.cpp  chat.cpp  framerate.cpp  integrity.cpp
src/res/: LICENSE  icon.rc  resources.h
src/utils/: utils.hpp
